# hartree_test

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: using_apachebeam.py  using_pandas.py
src/helpers/: __init__.py  common.py
src/output_data/: result.csv
tests/unit/: test_common.py
