[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \venv
  | \venv
  | .serverless/
  | node_modules/
)/
'''


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79


[tool.coverage.run]
branch = true
source = [
  'hartreetest',
]


[tool.coverage.paths]
source = [
  'src/',
  '*/site-packages'
]
