[metadata]
name = hartreetest
# Version needs regex in setup.py.
url = https://github.com/KashifAliM/hartree_test
project_urls =
    Documentation = https://github.com/KashifAliM/hartree_test
    Code = https://github.com/KashifAliM/hartree_test
    Issue tracker = https://github.com/KashifAliM/hartree_test
license = Kashif-IPR
maintainer = Kashif.Ali
maintainer_email = aliuk123@hotmail.co.uk
description = A test project.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =


[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    src
    tests

[coverage:paths]
source =
    src
    */site-packages

# Tools configuration
[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 79

[flake8]
per-file-ignores =
    # __init__ module exports names
    src/**/__init__.py: F401

[mypy]
ignore_missing_imports = True

[mypy-setup]
ignore_errors = True
